fixed display issue in installation where navigation was overlapping requirements
git-svn-id: http://code.elgg.org/elgg/trunk@9094 36083f99-b078-4883-b0ff-0f9b5a30f544

--- a/install/css/install.css
+++ b/install/css/install.css
@@ -209,6 +209,10 @@ select {
 	font-size: 90%;
 }
 
+.elgg-require-database {
+	padding-bottom: 50px;
+}
+
 .install-nav a {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
